--- a/CloneSimpleTweets/app/src/main/AndroidManifest.xml
+++ b/CloneSimpleTweets/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name="com.codepath.apps.clonesimpletwitter.TwitterApplication"
@@ -40,7 +42,7 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:host="CodepathAssignmtSimpleTwitterApp"
+                    android:host="clonesimpletwitter"
                     android:scheme="oauth" />
             </intent-filter>
         </activity>
